--- a/worker-sandbox/Cargo.toml
+++ b/worker-sandbox/Cargo.toml
@@ -31,8 +31,10 @@ futures-channel = "0.3.28"
 futures-util = { version = "0.3.28", default-features = false }
 rand = "0.8.5"
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
-serde-wasm-bindgen = "0.6.0"
 md5 = "0.7.0"
+
+# required to use internally tagged enums with serde_bytes
+serde-wasm-bindgen = { git = "https://github.com/carlsverre/serde-wasm-bindgen", rev = "638e36ea6c6334a709c582961cf457ed712d84b3" }
 
 [dev-dependencies]
 futures-channel = { version = "0.3.28", features = ["sink"] }
